--- a/src/main/resources/templates/main/header.html
+++ b/src/main/resources/templates/main/header.html
@@ -49,25 +49,6 @@
                         </div>
                         <div id="show">
                             <!-- JS로 처리 -->
-                            <!-- <div class="my-user-wrapper">
-                                <div class="user-menu-list">
-                                    <div class="menu-item">프로필</div>
-                                    <div class="menu-item">응원권</div>
-                                    <div class="menu-item-divider"></div>
-                                    <div class="menu-item">후원현황</div>
-                                    <div class="menu-item">관심 프로젝트</div>
-                                    <div class="menu-item">팔로우</div>
-                                    <div class="menu-item-divider"></div>
-                                    <div class="menu-item">알림</div>
-                                    <div class="menu-item">메시지</div>
-                                    <div class="menu-item-divider"></div>
-                                    <div class="menu-item">내가 만든 프로젝트</div>
-                                    <div class="menu-item">설정</div>
-                                    <div class="menu-item-divider"></div>
-                                    <div class="menu-item">로그아웃</div>
-                                </div>
-                            </div>
-                            <div class="user-dimmed-layout"></div> -->
                         </div>
                     </div>
                 </div>
@@ -96,12 +77,17 @@
                         </div>
                     </div>
                     <div class="extended-category-section category-extend-select">
-                        <div class="extended-categeory-header">
-                            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <!-- <div class="extended-categeory-header">
+                            <svg class="x-button extended-categeory-header" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path fill-rule="evenodd" clip-rule="evenodd" d="M12.0446 10.5249L6.49306 5L5.02166 6.46433L10.5732 11.9892L5 17.5357L6.4714 19L12.0446 13.4536L17.5286 18.9112L19 17.4468L13.516 11.9892L18.9783 6.55317L17.5069 5.08884L12.0446 10.5249Z" fill="#0D0D0D"></path>
                             </svg>
-                        </div>
+                        </div> -->
                         <div class="category-container">
+                            <div class="extended-categeory-header">
+                                <svg class="x-button extended-categeory-header" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path fill-rule="evenodd" clip-rule="evenodd" d="M12.0446 10.5249L6.49306 5L5.02166 6.46433L10.5732 11.9892L5 17.5357L6.4714 19L12.0446 13.4536L17.5286 18.9112L19 17.4468L13.516 11.9892L18.9783 6.55317L17.5069 5.08884L12.0446 10.5249Z" fill="#0D0D0D"></path>
+                                </svg>
+                            </div>
                             <div class="style-depth-category-wrapper">
                                 <div class="depth-category-group">
                                     <div class="depth-category">
@@ -114,25 +100,25 @@
                                         <div class="depth-category-icon">
                                             <svg width="38" height="38" viewBox="0 0 38 38" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M16.4 9.6H9.6V16.4H16.4V9.6ZM8 8V18H18V8H8Z" fill="#0D0D0D"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M28.4 9.6H21.6V16.4H28.4V9.6ZM20 8V18H30V8H20Z" fill="#0D0D0D"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M16.4 21.6H9.6V28.4H16.4V21.6ZM8 20V30H18V20H8Z" fill="#0D0D0D"></path><path d="M20 20H30V30H20V20Z" fill="#FF5757"></path></svg>
                                         </div>
-                                        <div class="depth-category-text">보드게임</div>
+                                        <div class="depth-category-text">보건</div>
                                     </div>
                                     <div class="depth-category">
                                         <div class="depth-category-icon">
                                             <svg width="38" height="38" viewBox="0 0 38 38" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M16.4 9.6H9.6V16.4H16.4V9.6ZM8 8V18H18V8H8Z" fill="#0D0D0D"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M28.4 9.6H21.6V16.4H28.4V9.6ZM20 8V18H30V8H20Z" fill="#0D0D0D"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M16.4 21.6H9.6V28.4H16.4V21.6ZM8 20V30H18V20H8Z" fill="#0D0D0D"></path><path d="M20 20H30V30H20V20Z" fill="#FF5757"></path></svg>
                                         </div>
-                                        <div class="depth-category-text">디지털게임</div>
+                                        <div class="depth-category-text">의료</div>
                                     </div>
                                     <div class="depth-category">
                                         <div class="depth-category-icon">
                                             <svg width="38" height="38" viewBox="0 0 38 38" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M16.4 9.6H9.6V16.4H16.4V9.6ZM8 8V18H18V8H8Z" fill="#0D0D0D"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M28.4 9.6H21.6V16.4H28.4V9.6ZM20 8V18H30V8H20Z" fill="#0D0D0D"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M16.4 21.6H9.6V28.4H16.4V21.6ZM8 20V30H18V20H8Z" fill="#0D0D0D"></path><path d="M20 20H30V30H20V20Z" fill="#FF5757"></path></svg>
                                         </div>
-                                        <div class="depth-category-text">웹툰만화</div>
+                                        <div class="depth-category-text">농어촌봉사</div>
                                     </div>
                                     <div class="depth-category">
                                         <div class="depth-category-icon">
                                             <svg width="38" height="38" viewBox="0 0 38 38" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M16.4 9.6H9.6V16.4H16.4V9.6ZM8 8V18H18V8H8Z" fill="#0D0D0D"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M28.4 9.6H21.6V16.4H28.4V9.6ZM20 8V18H30V8H20Z" fill="#0D0D0D"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M16.4 21.6H9.6V28.4H16.4V21.6ZM8 20V30H18V20H8Z" fill="#0D0D0D"></path><path d="M20 20H30V30H20V20Z" fill="#FF5757"></path></svg>
                                         </div>
-                                        <div class="depth-category-text">웹툰리소스</div>
+                                        <div class="depth-category-text">멘토링</div>
                                     </div>
                                 </div>
                                 <div class="depth-category-group"></div>
