--- a/src/main/resources/static/css/main/header.css
+++ b/src/main/resources/static/css/main/header.css
@@ -708,4 +708,100 @@ svg:not(:root) {
         font-size: 14px;
         padding: 0px 2px;
     }
+
+    .extended-category-section-start {
+        -webkit-box-align: center;
+        align-items: center;
+        -webkit-box-pack: center;
+        justify-content: center;
+        flex-direction: column;
+        background: rgb(255, 255, 255);
+        user-select: none;
+        box-shadow: rgba(0, 0, 0, 0.08) 0px 6px 7px;
+        position: fixed;
+        top: 0px;
+        left: 0px;
+        z-index: 999;
+        display: block;
+        width:100%;
+        height: 100%;
+        max-height: none;
+        margin: 0px;
+        padding-top: 24px;
+        overflow: auto;
+        transition: none 0s ease 0s;
+    }
+
+    .extended-categeory-header{
+        float: right;
+        display: flex;
+        -webkit-box-align: center;
+        align-items: center;
+        -webkit-box-pack: justify;
+        justify-content: space-between;
+        height: 60px;
+        padding: 0px 16px;
+        font-size: 18px;
+        font-weight: bold;
+    }
+
+    .depth-category-wrapper{
+        position: relative;
+        display: flex;
+        flex-flow: row wrap;
+        width: 100%;
+        -webkit-box-pack: justify;
+        justify-content: space-between;
+        height: auto;
+        padding: 5px 3px 16px;
+        overflow-x: auto;    
+    }
+
+    .depth-category-group{
+        display: flex;
+    }
+
+/*     .my-user-wrapper{
+        display: flex;
+        flex-direction: column;
+        box-sizing: border-box;
+        border-radius: 4px;
+        position: fixed;
+        width: 100%;
+        height: 100%;
+        inset: 0px;
+        z-index: 1200;
+        background: rgb(255, 255, 255);
+        transition: all 0.3s ease-in-out 0s;
+        border: none;
+    } */
+
+    .header-upper-layout{
+        padding: 0px;
+        margin-top: 10px;
+        height: 48px;
+    }
+    
+/*     .user-menu-list{
+        overflow-y: auto;
+        padding: 16px 0px;
+        display: flex;
+        width: 100%;
+        flex-direction: column;
+        background: rgb(255, 255, 255);
+        box-sizing: border-box;
+        border-radius: 4px;
+        user-select: none;
+        z-index: 1300;
+    } */
+
+    .logo-wrapper{
+        z-index: 1300;
+    }
+
+    .status-wrapper {
+        margin: 0px;
+        padding: 16px;
+        cursor: pointer;
+    }
 }
