--- a/src/main/resources/templates/funding/funding-plan.html
+++ b/src/main/resources/templates/funding/funding-plan.html
@@ -109,7 +109,7 @@
                             <div class="projectFormWrap">
                                 <ol class="findingPlan">
                                     <li class="planItem">
-                                        <div class="ItemForm">
+                                        <div class="ItemForm" style="display:flex">
                                             <div class="formHalf">
                                                 <p class="formTitle">시작일</p>
                                                 <div class="editorDate">
