--- a/src/main/resources/templates/funding/funding-project-plan.html
+++ b/src/main/resources/templates/funding/funding-project-plan.html
@@ -26,6 +26,11 @@
     width: 100%;
     height: 2px;
     background: rgb(248, 100, 83);
+    }
+    .note-resizebar, 
+    .note-toolbar{
+        background-color: white;
+    }
 }
 </style>
 <body>
@@ -80,7 +85,7 @@
                                         </i>
                                     </button>
                                     <div open="" class="toggleContent">
-                                        <p style="height: 40px;" class="styled__EditorDescription-upxyjo-1 editorDescription kGmObd">무엇을 만들기 위한 프로젝트인지 분명히 알려주세요.</p>
+                                        <p style="height: 40px;" class="editorDescription ">무엇을 만들기 위한 프로젝트인지 분명히 알려주세요.</p>
                                         <div class="editorPreview">
                                             <textarea id="projectIntroduction" name="editordata">
                                                 막연하다면 아래의 질문에 대한 답이 내용에 포함되도록 작성해보세요.<br><br>
@@ -106,25 +111,25 @@
                                     </button>
                                     <div open="" class="toggleContent">
                                         <div class="editorPreview">
-                                            <p style="height: 40px;" class="styled__EditorDescription-upxyjo-1 editorDescription kGmObd">무엇을 만들기 위한 프로젝트인지 분명히 알려주세요.</p>
-                                            <div class="storyContent">
-                                                <p>설정하신 목표 금액을 어디에 사용 예정이신지 구체적인 지출 항목으로 적어 주세요.</p>
-                                                <ul>
-                                                    <li>예산은 ‘제작비’가 아닌 구체적인 ‘항목’으로 적어 주세요.</li>
-                                                    <li>이번 프로젝트의 실행에 필요한 비용으로만 작성해 주세요.</li>
-                                                    <li>기부, 다음 프로젝트에 사용하기 등은 이번 프로젝트의 예산으로 볼 수 없어요.</li>
-                                                    <li>만일 전체 제작 비용 중 일부만 모금하시는 경우라면, 나머지 제작 비용은 어떻게 마련 예정인지 추가로 작성해 주세요.</li>
+                                            <p style="height: 40px;" class="editorDescription ">무엇을 만들기 위한 프로젝트인지 분명히 알려주세요.</p>
+                                            <textarea id="projectBudget" name="editordata">
+                                                설정하신 목표 금액을 어디에 사용 예정이신지 구체적인 지출 항목으로 적어 주세요.<br>
+                                                <br>
+                                                    예산은 ‘제작비’가 아닌 구체적인 ‘항목’으로 적어 주세요.<br>
+                                                    이번 프로젝트의 실행에 필요한 비용으로만 작성해 주세요.<br>
+                                                    기부, 다음 프로젝트에 사용하기 등은 이번 프로젝트의 예산으로 볼 수 없어요.<br>
+                                                    만일 전체 제작 비용 중 일부만 모금하시는 경우라면, 나머지 제작 비용은 어떻게 마련 예정인지 추가로 작성해 주세요.
+                                                    <br>
+                                                (예시)<br>
+                                                목표 금액은 아래의 지출 항목으로 사용할 예정입니다.<br>
+                                                <br>
+                                                    인건비
+                                                    배송비
+                                                    발주비
+                                                    디자인 의뢰비
+                                                    수수료>
                                                 </ul>
-                                                <p>(예시)</p>
-                                                <p>목표 금액은 아래의 지출 항목으로 사용할 예정입니다.</p>
-                                                <ul>
-                                                    <li>인건비</li>
-                                                    <li>배송비</li>
-                                                    <li>발주비</li>
-                                                    <li>디자인 의뢰비</li>
-                                                    <li>수수료</li>
-                                                </ul>
-                                            </div>
+                                            </textarea>
                                         </div>
                                     </div>
                                 </div>
@@ -140,44 +145,23 @@
                                         </i></button>
                                     <div open="" class="toggleContent">
                                         <div class="editorPreview">
-                                            <p style="height: 40px;" class="styled__EditorDescription-upxyjo-1 editorDescription kGmObd">무엇을 만들기 위한 프로젝트인지 분명히 알려주세요.</p>
-                                            <div class="storyContent">
-                                                <p>아래의 양식을 참고하여 작성해보세요.</p>
-                                                <p>( 예시 )</p>
-                                                <ul>
-                                                    <li>0월 0일: 현재 제품 시안 및 1차 샘플 제작</li>
-                                                    <li>0월 0일: 펀딩 시작일</li>
-                                                    <li>0월 0일: 샘플 작업 보완</li>
-                                                    <li>0월 0일: 펀딩 종료일</li>
-                                                    <li>0월 0일: 2차 샘플 제작</li>
-                                                    <li>0월 0일: 제품 디테일 보완</li>
-                                                    <li>0월 0일: 제품 발주 시작</li>
-                                                    <li>0월 0일: 후가공 처리 및 포장 작업</li>
-                                                    <li>0월 0일: 선물 예상 전달일</li>
+                                            <p style="height: 70px;" class="editorDescription ">작업 일정을 구체적인 날짜와 함께 작성하세요. 후원자가 일정을 보면서 어떤 작업이 진행될지 알 수 있어야 합니다. 펀딩 종료 이후의 제작 일정을 반드시 포함하세요.</p>
+                                            <textarea id="projectSchedule" name="editordata">
+
+                                                아래의 양식을 참고하여 작성해보세요.<br>
+                                                ( 예시 )<br>
+                                                
+                                                0월 0일: 현재 제품 시안 및 1차 샘플 제작<br>
+                                                0월 0일: 펀딩 시작일<br>
+                                                0월 0일: 샘플 작업 보완<br>
+                                                0월 0일: 펀딩 종료일<br>
+                                                0월 0일: 2차 샘플 제작<br>
+                                                0월 0일: 제품 디테일 보완<br>
+                                                0월 0일: 제품 발주 시작<br>
+                                                0월 0일: 후가공 처리 및 포장 작업<br>
+                                                0월 0일: 선물 예상 전달일<br>
                                                 </ul>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div name="introduction" class="planSelection">
-                                <div>
-                                    <button open="" class="accorationTitle">프로젝트 팀 소개
-                                        <i>
-                                            <div name="arrow2-down" class="icon-svg"><svg
-                                                    viewBox="0 0 48 48">
-                                                    <path fill-rule="evenodd" clip-rule="evenodd"
-                                                        d="M2 14.4065C2 13.1363 3.09843 12.0615 4.39657 12.0615C4.99571 12.0615 5.59485 12.257 6.09414 12.7455L23.9685 29.4526L41.843 12.6478C42.8415 11.7684 44.3394 11.7684 45.338 12.7455C46.2367 13.7226 46.2367 15.1882 45.2381 16.0676L23.9685 36L2.79886 16.0676C2.29957 15.6767 2 14.9928 2 14.4065Z">
-                                                    </path>
-                                                </svg>
-                                            </div>
-                                        </i>
-                                    </button>
-                                    <div open="" class="toggleContent">
-                                        <div class="editorPreview">
-                                            <p style="height: 40px;" class="styled__EditorDescription-upxyjo-1 editorDescription kGmObd">무엇을 만들기 위한 프로젝트인지 분명히 알려주세요.</p>
-                                            <div class="storyContent">
-                                                <span class="empty-content">작성된 내용이 없습니다</span></div>
+                                            </textarea>
                                         </div>
                                     </div>
                                 </div>
@@ -198,8 +182,8 @@
                                     </button>
                                     <div open="" class="toggleContent">
                                         <div class="editorPreview">
-                                            <p style="height: 40px;" class="styled__EditorDescription-upxyjo-1 editorDescription kGmObd">무엇을 만들기 위한 프로젝트인지 분명히 알려주세요.</p>
-                                            <div class="storyContent"><span class="empty-content">작성된 내용이 없습니다</span></div>
+                                            <p style="height: 70px;" class="editorDescription">후원자가 후원 금액별로 받을 수 있는 선물을 상세하게 알려주세요. 표로 정리하거나 예시 이미지를 포함하는 것도 방법입니다.</p>
+                                            <textarea id="projectGift" name="editordata">작성된 내용이 없습니다.</textarea>
                                         </div>
                                     </div>
                                 </div>
