--- a/src/main/resources/templates/volunteer-work/work.html
+++ b/src/main/resources/templates/volunteer-work/work.html
@@ -32,7 +32,7 @@
                     </div>
                 </section> -->
                 <div>
-                    <select>
+                    <!-- <select class="select-region">
                         <option value="">전체보기</option>
                         <option value="">서울특별시</option>
                         <option value="">경기도</option>
@@ -42,7 +42,7 @@
                         <option value="">경상북도</option>
                         <option value="">전라남도</option>
                         <option value="">전라북도</option>
-                    </select>
+                    </select> -->
                 </div>
                 <section class="service-info">
                     <div class="items-info-layout">
@@ -50,7 +50,18 @@
                         <h4 class="service-header">
                             진행 중인 봉사 정보
                         </h4>
-                            <button type="button" class="button">지원</button>
+                        <select class="select-region">
+                            <option value="">전체보기</option>
+                            <option value="">서울특별시</option>
+                            <option value="">경기도</option>
+                            <option value="">충청북도</option>
+                            <option value="">충청남도</option>
+                            <option value="">경상남도</option>
+                            <option value="">경상북도</option>
+                            <option value="">전라남도</option>
+                            <option value="">전라북도</option>
+                        </select>
+                            <!-- <button type="button" class="button">지원</button> -->
                         </div>
                     </div>
                     <!--  -->
