--- a/src/main/resources/static/css/volunteer-work/work.css
+++ b/src/main/resources/static/css/volunteer-work/work.css
@@ -344,9 +344,9 @@ a{
     padding: 5px 10px;
     margin-right: 7px;
     border-radius: 4px;
-    color: #4e61ff;
+    color: rgb(248, 100, 83);
     background-color: #fff;
-    border: 1px solid #4e61ff;
+    border: 1px solid rgb(248, 100, 83);
     font-family: inherit;
     transition: background-color 0.2s ease-in-out;
     text-decoration: none;
@@ -354,10 +354,25 @@ a{
 }
 .currentPage{
     color: #fff;
-    background-color: #4e61ff;
+    background-color: rgb(248, 100, 83);
     display: inline-block;
     padding: 5px 10px;
     margin-right: 5px;
     border-radius: 3px;
-    border: 1px solid #4e61ff;
+    border: 1px solid rgb(248, 100, 83);
+}
+
+.select-region {
+    border: 1px solid rgb(216, 213, 213);
+    width: 106px;
+    height: 34px;
+    line-height: 34px;
+    box-sizing: border-box;
+    border-radius: 5px;
+    color: rgb(72, 72, 72);
+    padding: 0px;
+    /* overflow: hidden; */
+    float: right;
+    margin-right: 3px;
+    outline: none;
 }
