--- a/src/main/resources/templates/volunteer-work/work-detail.html
+++ b/src/main/resources/templates/volunteer-work/work-detail.html
@@ -7,7 +7,9 @@
     <title>봉사 상세보기</title>
     <link rel="stylesheet" href="../../static/css/font/font.css">
     <link rel="stylesheet" href="../../static/css/main/header.css">
+    <link rel="stylesheet" href="/static/css/volunteer-work/work-detail-response.css">
     <link rel="stylesheet" href="/static/css/volunteer-work/work-detail.css">
+
 </head>
 <body>
     
@@ -49,19 +51,13 @@
                                         <dd>2023.04.18 ~ 2023.04.27</dd>
                                     </dl>
                                     <dl>
-                                        <dt>활동요일</dt>
-                                        <dd>월,목</dd>
-                                    </dl>
-                                </div>
-                                <div class="group">
-                                    <dl>
                                         <dt>모집인원</dt>
                                         <dd>1 명 / 일</dd>
                                     </dl>
-                                    <dl>
-                                        <dt>신청인원</dt>
-                                        <dd>1 명</dd>
-                                    </dl>
+                                    <!-- <dl>
+                                        <dt>활동요일</dt>
+                                        <dd>월,목</dd>
+                                    </dl> -->
                                 </div>
                                 <div class="group">
                                     <dl>
@@ -69,46 +65,18 @@
                                         <dd>보건의료 &gt; 기타</dd>
                                     </dl>
                                     <dl>
-                                        <dt>봉사자유형</dt>
-                                        <dd>
-                                            성인&nbsp;
-                                            
-                                        </dd>
+                                        <dt>등록기관</dt>
+                                        <dd>서울특별시 송파구</dd>
                                     </dl>
                                 </div>
-                                <div class="group">
-                                <dl>
-                                    <dt>모집기관</dt>
-                                    <dd>
-                                        
-                                        <span class="text-l">심봉사</span>
-                                       <!--  <a href="/vols/P9140/srvcinfo/volsDnttInfo.do?type=show&amp;nanmmbyId=7401022" target="_blank" title="새창열림" class="btn btn_gray">상세정보</a> -->
-                                        
-                                    </dd>
-                                </dl>
-                                <dl>
-                                    <dt>등록기관</dt>
-                                    <dd>서울특별시 송파구</dd>
-                                </dl>
-                            </div>
-                            <div class="group">
-                                <dl>
-                                    <dt>봉사장소</dt>
-                                    <dd>서울아산병원</dd>
-                                </dl>
-                                <dl>
-                                    <dt>봉사대상</dt>
-                                    <dd>기타</dd>
-                                </dl>
-                            </div>
-                            <div class="group">
-                                <dl class="">
-                                    <dt>활동구분</dt>
-                                    <dd>
-                                        오프라인
-                                    </dd>
-                                </dl>
-                            </div>
+                                
+                                 <div class="group">
+                                    <dl>
+                                        <dt>봉사장소</dt>
+                                        <dd>심봉사</dd>
+                                    </dl>
+                               
+                                </div>
                             
                         </div>
                         <div class="detail-info-board-wrap">
@@ -151,7 +119,10 @@
                                 
                                      <div class="company-info-map">
                                         [수요처 지도]
-                                        <a href="javascript:;" id="skipBtn" style="float: right;">지도 건너뛰기</a>
+                                        <!-- <a href="javascript:;" id="skipBtn" style="float: right;">지도 건너뛰기</a> -->
+                                        <div>
+                                            <img src="/static/image/map.png" alt="kakao">
+                                        </div>
                                         
                                         
                                         <!-- <div id="map" style="position: relative; overflow: hidden; background: url(&quot;https://t1.daumcdn.net/mapjsapi/images/bg_tile.png&quot;);">
@@ -420,6 +391,30 @@
                                             <dd>서울특별시 송파구 올림픽로43길</dd>
                                         </dl>
                                 </div>
+                            </div>
+                        </div>
+
+                        <div class="work-detail-board-layout">
+                            <div class="work-detail-list-btn-wrap">
+                               <div style="justify-content: center; display: flex;">
+                                    <button type="button" class="list-btn" id="btnList" name="btnList">
+                                        <span>목록</span>
+                                    </button>
+                                </div>
+                                
+                                    <a class="work-list-prev-btn board_prev" id="board_prev">
+                                        <img src="https://www.1365.go.kr/web/vols/images/ico/ico_board_btn_prev.png" alt="이전글 표시">이전글
+                                        <span class="">이전글이 없습니다.</span>
+                                    </a>
+                                
+                                
+                                    <a href="" class="work-detail-list-next-btn next-btn" id="board_next" onclick="">
+                                        다음글
+                                        <img src="https://www.1365.go.kr/web/vols/images/ico/ico_board_btn_next.png" alt="다음글 표시">
+                                        <span class="">우크라이나 &amp; 튀르키예 &amp; 시리아 긴급구호 물품지원 선별 분류 작업</span>
+                                    </a>
+                                
+                                
                             </div>
                         </div>
                             
