--- a/src/main/resources/templates/funding/funding-initial-info.html
+++ b/src/main/resources/templates/funding/funding-initial-info.html
@@ -440,14 +440,16 @@
                                                         </path>
                                                     </svg>
                                                 </div>
-                                            </i>이미지 업로드 (0/5)</span>
-                                        <p>최소 1개, 최대 5개까지 업로드 가능</p>
+                                            </i>대표 이미지 업로드</span>
+                                        <p>대표 이미지 1개</p>
                                         <p>파일 형식: jpg 또는 png / 사이즈: 가로 1,240px, 세로 930px 이상)</p>
                                         <strong>※ 이미지를 등록하면 즉시 반영됩니다.</strong>
                                     </div>
                                     <input type="file" id="imageFile" accept=".jpg, .jpeg, .png" multiple="">
                                 </div>
-                                <li class="ImgStyleList firstTest imgList"></li>
+                                <li class="ImgStyleList firstTest imgList">
+                                    
+                                </li>
                             </div>
                         </div>
                     </div>
@@ -464,5 +466,6 @@
         $("#_topContent").load("/templates/funding/funding-topContent.html");
     });
 </script>
-<script src="/static/js/funding/funding-initial-info.js"></script>
+<!-- <script src="/static/js/funding/funding-initial-info.js"></script> -->
+<script src="/static/js/funding/funding-file.js"></script>
 </html>
